--- a/admissions/app/views/gaku/admin/admissions/index.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/index.html.slim
@@ -1,13 +1,11 @@
 - content_for :title, t(:'admissions.candidates.list')
-.pull-right
-  #admissions_links
-
 .row-fluid
   .pull-left
     h4.mt-xs.mb-0 =t(:'admissions.candidates.list')
   .pull-right
-    #new-admin-admission-link
+    span#new-admin-admission-link
       = render 'gaku/admin/admissions/links', :admission_method => @admission_method
+    span#admissions_links
       = render 'gaku/admin/admissions/admissions_links', :admission_params => @admission_params
 .row-fluid
   hr
