--- a/core/app/views/gaku/admin/schools/show.html.slim
+++ b/core/app/views/gaku/admin/schools/show.html.slim
@@ -15,10 +15,11 @@
 
     = well_div do
       - if params[:action] == 'school_details'
-        span4
-          = link_to t(:'school.edit_master'), admin_school_details_edit_path, :class => 'btn btn-danger span4', :confirm => t('confirm')
+        .span6
+          = link_to_edit_with_custom_text t(:'school.edit_master'), admin_school_details_edit_path, {:confirm => t(:'confirm')}
       - else
         - unless @school.is_primary
-          = link_to_edit_with_text [:edit, :admin, @school], :remote => true
-
-      = link_to_back admin_schools_path
+          .span6
+            = link_to_edit_with_text [:edit, :admin, @school], :remote => true
+      .span6
+        = link_to_back admin_schools_path
