--- a/core/app/views/gaku/courses/show.html.slim
+++ b/core/app/views/gaku/courses/show.html.slim
@@ -26,5 +26,7 @@
     = render :partial => 'gaku/notes/notes'
 
 = well_div do
-  = link_to_edit_with_text [:edit, @course], :remote => true
-  = link_to_back courses_path
+  .span6
+    = link_to_edit_with_text [:edit, @course], :remote => true
+  .span6
+    = link_to_back courses_path
