--- a/core/app/views/gaku/students/_edit_buttons.html.slim
+++ b/core/app/views/gaku/students/_edit_buttons.html.slim
@@ -1,9 +1,9 @@
 = well_div do
   .span5
-    = link_to_edit_with_text [:edit, @student], :class => "span12 btn btn-warning edit-link", :remote => true
+    = link_to_edit_with_text [:edit, @student], :remote => true
   .span5
-    = link_to_back students_path, :class => "span12 btn"
+    = link_to_back students_path
   .span2#delete-student
-    = link_to_modal_delete nil, :id => 'delete-student-link', :class => 'btn btn-danger pull-right', :data => {:confirm => nil}
+    = link_to_modal_delete nil, :id => 'delete-student-link', :data => {:confirm => nil}
   .delete_modal
     = render 'delete_modal', :student => @student
