--- a/admissions/app/views/gaku/admin/admissions/students/_student_modal.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/students/_student_modal.html.slim
@@ -1,9 +1,7 @@
 - model = @admission || Gaku::Admission.new
 - model_class = model.class
-.modal.hide#student-modal wmode="opaque" style="padding: 41px;position: absolute;left: 500px;top: 300px;width:auto;height:auto;text-align:center;"
-  .modal-header
-    button.close type="button" data-dismiss="modal"
-      'x
-  .modal-body
+
+= student_chooser_modal do
+  = modal_header t(:'student.choose')
+  = modal_body do
     = render 'gaku/admin/admissions/students/student_chooser'
-    = link_to_cancel :class => 'span3 btn btn-danger', :id => 'cancel-class-group-student-link'
