--- a/core/app/views/gaku/teachers/show.html.slim
+++ b/core/app/views/gaku/teachers/show.html.slim
@@ -23,17 +23,16 @@
 /= render :partial => 'tabs'
 
 = well_div do
-  .span4
-    = link_to_edit_with_text [:edit, @teacher], :class => "span12 btn btn-warning edit-link", :remote => true
-  .span4
-    = link_to_back teachers_path, :class => "span12 btn"
-
-row-fluid
-  .span12
+  .span5
+    = link_to_edit_with_text [:edit, @teacher], :remote => true
+  .span5
+    = link_to_back teachers_path
+  .span2
     #delete-student
-      = link_to_modal_delete nil, :id => 'delete-teacher-link', :class => 'btn btn-danger pull-right', :data => {:confirm => nil}
-  .delete_modal
-    =render 'delete_modal', :teacher => @teacher
+      = link_to_modal_delete nil, :id => 'delete-teacher-link', :data => {:confirm => nil}
+
+.delete_modal
+  =render 'delete_modal', :teacher => @teacher
 
 coffee:
   $('#delete-teacher-link').on 'click', (event) ->
