--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -8,4 +8,4 @@ td.birth = student.birth_date
 td.gender = student.gender.nil? ? '' : (student.gender ? t(:'gender.male') : t(:'gender.female'))
 // TODO: move this to helper
 - if !phase.exam.nil?
-  td.exam-score = !@students.select{|f| f[:student] == student}[0].nil? ? @students.select{|f| f[:student] == student}[0][:exam_score] : t(:'exams.not_graded')
+  td.exam-score = !@students.select{|f| (f[:student] == student && f[:state_id] == state.id)}[0].nil? ? @students.select{|f| (f[:student] == student && f[:state_id] == state.id)}[0][:exam_score] : t(:'exams.not_graded')
