[views][locales] show message if no phase/state in selected period and method

--- a/admissions/app/views/gaku/admin/admission_periods/create.js.erb
+++ b/admissions/app/views/gaku/admin/admission_periods/create.js.erb
@@ -1,6 +1,7 @@
 $('#admin-admission-periods-index tbody').append('<%= render_js_partial("admission_period", {:admission_period => @admission_period}) %>');
 
 $('#new-admin-admission-period').slide();
+$('#new-admin-admission-period').html('');
 $('#new-admin-admission-period-link').show();
 
 showNotice("<%= render_flash %>");
