--- a/admissions/app/views/gaku/admin/admission_methods/create.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/create.js.erb
@@ -1,6 +1,7 @@
 $('#admin-admission-methods-index tbody').append('<%= render_js_partial("admission_method", {:admission_method => @admission_method}) %>');
 
 $('#new-admin-admission-method').slide();
+$('#new-admin-admission-method').html('');
 $('#new-admin-admission-method-link').show();
 
 showNotice("<%= render_flash %>");
