--- a/admissions/app/views/gaku/admin/admissions/_state_change_form.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_state_change_form.html.slim
@@ -1,15 +1,16 @@
-.span7
-  table
-    th
-      = check_box_tag "all_students_check"
-      = "All"
-    th
-      = select_tag :state_id, options_from_collection_for_select(state.admission_phase.admission_phase_states.where('id != ?', state.id), :id, :name, state.id)
+- if state.admission_phase.admission_phase_states.count > 1
+  .span7
+    table
+      th
+        = check_box_tag "all_students_check"
+        = "All"
+      th
+        = select_tag :state_id, options_from_collection_for_select(state.admission_phase.admission_phase_states.where('id != ?', state.id), :id, :name, state.id)
 
-    th
-      = submit_tag "Save"
-      - if state.can_admit
-        = submit_tag "Admit", :name => 'admit_students'
+      th
+        = submit_tag "Save"
+        - if state.can_admit
+          = submit_tag "Admit", :name => 'admit_students'
 
-  = hidden_field_tag :admission_period_id, @admission_period.id
-  = hidden_field_tag :admission_method_id, @admission_method.id
+    = hidden_field_tag :admission_period_id, @admission_period.id
+    = hidden_field_tag :admission_method_id, @admission_method.id
