add comment admissions/index.xls.erb

--- a/admissions/app/views/gaku/admin/admissions/index.xls.erb
+++ b/admissions/app/views/gaku/admin/admissions/index.xls.erb
@@ -60,7 +60,10 @@
         
         <Cell ss:StyleID="s1"><Data ss:Type="String">素点合計</Data></Cell>
     <% unless phase.exam.exam_portions.blank? %>
+      
+      <!-- 入試試験が登録されているphaseを選択する -->
       <% eps = @admission_method.admission_phases[1].exam.exam_portions %>
+      
       <% eps.each do |ep| %>
           <Cell ss:StyleID="s1"><Data ss:Type="String"><%= ep.name %></Data></Cell>
       <% end %>
