--- a/admissions/app/views/gaku/admin/admission_periods/_form_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admission_periods/_form_fields.html.slim
@@ -10,13 +10,17 @@
 .row-fluid
   .span12
     = f.check_box :rolling, :label => t(:'admission_periods.rolling')
-
+h4
+  = t(:'admission_methods.plural')
 .row-fluid
   = f.fields_for :period_method_associations do |method_form|
     .method_form
       .row-fluid
         .span6
-          = method_form.select :admission_method_id, options_from_collection_for_select(@admission_methods, :id, 'name', method_form.object.admission_method_id), { :prompt => 'Select Admission Method' }, :label => t(:'admission_methods.name')
+          - if method_form.object.new_record?
+            = method_form.select :admission_method_id, options_from_collection_for_select(@admission_methods, :id, 'name', method_form.object.admission_method_id), { :prompt => 'Select Admission Method' }, :label => t(:'admission_methods.name')
+          - else
+            = method_form.object.admission_method.name
         .span6[style="margin-top: 25px;"]
           = method_form.link_to_remove t(:'admission_methods.remove'), :class => 'btn btn-danger'
     = hr
