--- a/core/app/views/gaku/addresses/_addresses.html.slim
+++ b/core/app/views/gaku/addresses/_addresses.html.slim
@@ -4,7 +4,7 @@ div id="#{@resource_name.pluralize}"
     div id="new-#{@resource_name}" class='hide'
     .pull-left
       = count_div "#{@resource_name.pluralize}-count" do
-        = print_count nested_resources.last.addresses.count, t_address_list
+        = print_count nested_resources.last.addresses_count, t_address_list
     .pull-right
       = ajax_link_to_new t(:'address.add'), [:new, nested_resources, :address].flatten, :id => "new-#{@resource_name}-link" if can_edit?
 
