--- a/core/app/views/gaku/admin/schools/show.html.slim
+++ b/core/app/views/gaku/admin/schools/show.html.slim
@@ -16,7 +16,7 @@
     = well_div do
       - if params[:action] == 'school_details'
         span4
-          = link_to t(:'school.edit_master'), admin_school_details_edit_path, :class => 'btn btn-danger span4', :confirm => t('confirm')
+          = link_to t(:'school.edit_master'), admin_school_details_edit_path, :class => 'btn btn-danger span4', :confirm => t('confirm'), :id => 'edit-admin-primary-school'
       - else
         - unless @school.is_primary
           = link_to_edit_with_text [:edit, :admin, @school], :remote => true
