--- a/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
@@ -5,6 +5,7 @@
         = th_icon 'check'
         = th t(:'surname')
         = th t(:'name')
+        = th t(:'admissions.applicant_number')
         = th t(:'birth')
         = th t(:'gender.label')
         - if !state.admission_phase.exam.nil?
