--- a/core/app/views/gaku/admin/schools/_show_table.html.slim
+++ b/core/app/views/gaku/admin/schools/_show_table.html.slim
@@ -29,7 +29,7 @@
       -if school.primary?
         tr
           th.btn-c2 = t(:'school_level.plural')
-          td = comma_separete_list(school.school_levels)
+          td = comma_separated_list(school.school_levels)
 
   .span3.well
     = render 'gaku/admin/shared/picture', :resource => school
