WIP : Improve student db queries

--- a/core/app/views/gaku/shared/fields/_student_fields.html.slim
+++ b/core/app/views/gaku/shared/fields/_student_fields.html.slim
@@ -12,8 +12,8 @@
   td.class-name = student_presenter.class_group
   td.seat-number = student_presenter.seat_number
   td.admitted = student.admitted
-  td.address = student.address_widget
-  td.contact = student.contact_widget
+  td.address = student.primary_address
+  td.contact = student.primary_contact
 
 
   td.assignments
