--- a/core/app/views/gaku/addresses/destroy.js.erb
+++ b/core/app/views/gaku/addresses/destroy.js.erb
@@ -1,6 +1,7 @@
-<%- if @addressable.addresses.any? && @address.is_primary? %>
-	$('#address-<%= @addressable.addresses.first.id%> td a').addClass('btn-primary');
+showNotice("<%= render_flash %>");
+
+<%- if @addressable.addresses.reload.any? && @address.is_primary? %>
+  $('#address-<%= @addressable.addresses.first.id%> td a').addClass('btn-primary');
 <% end %>
 
 $('.<%= @resource_name.pluralize %>-count').html('<%= print_count(@count-1, t_address_list) %>');
-showNotice("<%= render_flash %>");
