Change counts in students/_tabs

--- a/core/app/views/gaku/shared/student/_show_table.html.slim
+++ b/core/app/views/gaku/shared/student/_show_table.html.slim
@@ -14,11 +14,11 @@
 
       tr
         th = t(:'contact.primary')
-        td#contact_widget = student.contact_widget
+        td#contact_widget = student.primary_contact
 
       tr
         th = t(:'address.primary')
-        td#address_widget = student.address_widget
+        td#address_widget = student.primary_address
 
       tr
         th = t(:'admitted')
