--- a/core/app/views/gaku/shared/student/_tabs.html.slim
+++ b/core/app/views/gaku/shared/student/_tabs.html.slim
@@ -4,10 +4,10 @@
       ul.nav.nav-tabs
         li.active
           a#student-addresses-tab-link data-toggle="tab" href="#addresses"
-            = print_count @student.addresses.count, t(:'address.plural')
+            = print_count @student.addresses_count, t(:'address.plural')
         li
           a#student-contacts-tab-link data-toggle="tab" href="#contacts"
-            = print_count @student.contacts.count, t(:'contact.plural')
+            = print_count @student.contacts_count, t(:'contact.plural')
         li
           a#student-notes-tab-link data-toggle="tab" href="#notes"
             = print_count @student.notes.count, t(:'note.plural')
