Refactored conn between Student and Guardian, write counter_cache specs

--- a/core/app/views/gaku/notes/_notes.html.slim
+++ b/core/app/views/gaku/notes/_notes.html.slim
@@ -2,7 +2,7 @@
   .hide *{:id => 'new-' + @notable_resource + '-note'}
   .pull-left
     = count_div "#{@notable_resource}-notes-count" do
-      = print_count @notable.notes.count, t_note_list
+      = print_count @notable.notes_count, t_note_list
   .pull-right
     = ajax_link_to_new t(:'note.add'), [:new, @notable, :note], :id => 'new-' + @notable_resource + '-note-link' if can_edit?
 
