--- a/core/app/views/gaku/notes/destroy.js.erb
+++ b/core/app/views/gaku/notes/destroy.js.erb
@@ -1,4 +1,4 @@
-$('#new-<%= @notable_resource %>-note-tab-link').html("<%= print_count(@notable.notes.count, t('note.plural')) %>");
-$('.<%= @notable_resource %>-notes-count').html("<%= print_count(@notable.notes.count, t('note.list')) %>");
-$('#<%= @notable_resource %>-notes-tab-link').html("<%= print_count(@notable.notes.count, t('note.plural')) %>");
+$('#new-<%= @notable_resource %>-note-tab-link').html("<%= print_count(@notable.notes_count-1, t('note.plural')) %>");
+$('.<%= @notable_resource %>-notes-count').html("<%= print_count(@notable.notes_count-1, t('note.list')) %>");
+$('#<%= @notable_resource %>-notes-tab-link').html("<%= print_count(@notable.notes_count-1, t('note.plural')) %>");
 showNotice("<%= render_flash %>");
