--- a/core/app/views/gaku/shared/fields/_student_fields.html.slim
+++ b/core/app/views/gaku/shared/fields/_student_fields.html.slim
@@ -21,5 +21,5 @@
       = address_icon
     - student.contacts_count.times do
       = contact_icon
-    - student.guardians.count.times do
+    - student.guardians_count.times do
       = guardian_icon
