--- a/core/app/views/gaku/students/guardians/_guardians.html.slim
+++ b/core/app/views/gaku/students/guardians/_guardians.html.slim
@@ -4,7 +4,7 @@
     #new-student-guardian.hide
     .pull-left
       = count_div 'student-guardians-count' do
-        = print_count @student.guardians.count, t_guardian_list
+        = print_count @student.guardians_count, t_guardian_list
     .pull-right
       = ajax_link_to_new t(:'guardian.add'), [:new, @student, :guardian], :id => "new-student-guardian-link" if can_edit?
 
