--- a/core/app/views/gaku/students/course_enrollments/destroy.js.erb
+++ b/core/app/views/gaku/students/course_enrollments/destroy.js.erb
@@ -1,3 +1,3 @@
-$('#student-course-enrollments-tab-link').html("<%= print_count(@count-1, t_course_plural)  %>");
-$('.student-course-enrollments-count').html("<%= print_count(@count-1, t_course_list) %>");
+$('#student-course-enrollments-tab-link').html("<%= print_count(@student.reload.courses_count, t_course_plural)  %>");
+$('.student-course-enrollments-count').html("<%= print_count(@student.courses_count, t_course_list) %>");
 showNotice("<%= render_flash %>");
