--- a/core/app/views/gaku/students/class_group_enrollments/_new_modal.html.slim
+++ b/core/app/views/gaku/students/class_group_enrollments/_new_modal.html.slim
@@ -21,6 +21,7 @@
             = f.select :class_group_id, class_groups, {:prompt => t(:'class_group.choose')}, :label => t(:'class_group.plural')
           .span6
             = f.text_field :seat_number, :label => t(:'class_group_enrollment.seat_number')
+            = hidden_field_tag "class_group_enrollment[student_id]", @student.id
 
       .row-fluid
         = buttons_for @class_group_enrollment, :id => 'class-group-enrollment', :label => t(:'class_group_enrollment.create')
